html changes for errors

--- a/book.html
+++ b/book.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Portfolio - Esther Lee - book series</title>
- </head>
- <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Esther Lee - book series</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
 
  <!-- Full header -->
-<header>
-    <div class="logo">
-        <a href="index.html">
-            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-        </a>
-    </div>
-</header>
-
-<!-- Navigation Bar -->
-<nav>
-    <div class ="nav-container" id="nav-container">
-          <ul id="nav-links" class="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="index.html">About Me</a></li>
-    </div>
-</nav>
-
-<!--Content-->
-
- <title>Susan Sontag Series</title>
-</head>
 <body>
- <h1>Susan Sontag Book Series</h1>
- <p class="description">This book cover series reinterprets Susan Sontag’s iconic works through bold, modern design. Each cover uses a structured grid, striking patterns, and textured overlays to capture the provocative essence of her essays.</p>
- <img src="Images/bookseries/against.jpg" alt="Against Interpretation" class="container-image"/>
- <img src="Images/bookseries/photography.jpg" alt="On Photography" class="container-image"/>
- <img src="Images/bookseries/camp.jpg" alt="Notes on Camp" class="container-image" />
-</body>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
+        </div>
+    </header>
 
-<!--Footer-->
-<footer>
-    <a href="#top">Back to the Top &#8593</a>
-</footer>
+    <!-- Navigation Bar -->
+    <nav>
+        <div class ="nav-container" id="nav-container">
+            <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="index.html">About Me</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!--Content-->
+    <h1>Susan Sontag Book Series</h1>
+    <p class="description">This book cover series reinterprets Susan Sontag’s iconic works through bold, modern design. Each cover uses a structured grid, striking patterns, and textured overlays to capture the provocative essence of her essays.</p>
+    <img src="Images/bookseries/against.jpg" alt="Against Interpretation" class="container-image"/>
+    <img src="Images/bookseries/photography.jpg" alt="On Photography" class="container-image"/>
+    <img src="Images/bookseries/camp.jpg" alt="Notes on Camp" class="container-image" />
+
+    <!--Footer-->
+    <footer>
+        <a href="#top">Back to the Top &#8593;</a>
+    </footer>
 
 </body>
 </html>
