--- a/onni.html
+++ b/onni.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,42 +9,41 @@
 </head>
 
  <!-- Full header -->
- <header>
-    <div class="logo">
-        <a href="index.html">
-            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-        </a>
-    </div>
-</header>
+  <body>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
+        </div>
+    </header>
 
 <!-- Navigation Bar -->
-<nav>
-    <div class ="nav-container" id="nav-container">
-          <ul id="nav-links" class="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="index.html">About Me</a></li>
-    </div>
-</nav>
+    <nav>
+        <div class ="nav-container" id="nav-container">
+            <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="index.html">About Me</a></li>
+            </ul>
+        </div>
+    </nav>
 
         <!--Content-->
-    <title>Onni</title>
-    </head>
-    <body>
      <h1>The Creation of Onni</h1>
      <p class="description">This merchandise was created to welcome incoming freshmen to Pennoni Honors College, fostering a strong connection from the start of their Drexel journey. </p>
-    <img src="Images/onni/sticker_photo.jpg" alt="Onni Stickers" class="container-image"/>
-    <p class="description">Distributed free of charge, the designs featured "Onni," a friendly dog character inspired by Drexel campus life and Gen Z trends.</p>
+     <img src="Images/onni/sticker_photo.jpg" alt="Onni Stickers" class="container-image"/>
+     <p class="description">Distributed free of charge, the designs featured "Onni," a friendly dog character inspired by Drexel campus life and Gen Z trends.</p>
      <img src="Images/onni/sticker1.jpg" alt="Onni Stickers 1" class="container-image"/>
      <img src="Images/onni/sticker2.jpg" alt="Onni Stickers 2" class="container-image"/>
      <img src="Images/onni/people.jpg" alt="Event Photos for Onni" class="container-image"/>
      <p class="description">Guided by adjectives like relatable, fun, and inclusive, the design emphasizes simplicity and versatility, leaving a lasting impression on students.</p>
      <img src="Images/onni/insta.jpg" alt="Onni Instagram 1" class="container-image"/>
      <img src="Images/onni/insta1.jpg" alt="Onni Instagra 2" class="container-image"/>
-    </body>
 
     <!-- Footer -->
     <footer>
-        <a href="#top">Back to the Top &#8593</a>
+        <a href="#top">Back to the Top &#8593;</a>
     </footer>
 
-    </html>
+</body>
+</html>
