--- a/pca.html
+++ b/pca.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +9,26 @@
 </head>
 
  <!-- Full header -->
- <header>
-    <div class="logo">
-        <a href="index.html">
-            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-        </a>
-    </div>
-</header>
+<body>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
+        </div>
+    </header>
 
-<!-- Navigation Bar -->
-<nav>
-    <div class ="nav-container" id="nav-container">
-          <ul id="nav-links" class="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="index.html">About Me</a></li>
-    </div>
-</nav>
+    <!-- Navigation Bar -->
+    <nav>
+        <div class ="nav-container" id="nav-container">
+            <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="index.html">About Me</a></li>
+            </ul>
+        </div>
+    </nav>
 
             <!--Content-->
-    <title>Onni</title>
-    </head>
-    <body>
         <h1>Philadelphia Corporation for Aging</h1>
         <p class="description"> Founded in 1973, the Philadelphia Corporation for Aging (PCA) is a nationally recognized agency supporting older Philadelphians and individuals with disabilities in achieving health, independence, and productivity. </p>
         <img src="Images/pca/thumbnail.jpg" alt="PCA thumbnail" class="container-image"/>
@@ -37,11 +37,11 @@
         <img src="Images/pca/poster1.jpg" alt="PCA posters 1" class="container-image"/>
         <img src="Images/pca/poster2.jpg" alt="PCA posters 2" class="container-image"/>
         <img src="Images/pca/poster3.jpg" alt="PCA posters 3" class="container-image"/>
-    </body>
 
-<!--Footer-->
-<footer>
-    <a href="#top">Back to the Top &#8593</a>
-</footer>
+    <!--Footer-->
+    <footer>
+        <a href="#top">Back to the Top &#8593;</a>
+    </footer>
 
-    </html>
+</body>
+</html>
