--- a/star.html
+++ b/star.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Esther Lee - Star Scholars</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
-<body>
 
 <!-- Full header -->
+<body>
     <header>
         <div class="logo">
             <a href="index.html">
@@ -23,14 +24,11 @@
               <ul id="nav-links" class="nav-links">
                 <li><a href="work.html">My Work</a></li>
                 <li><a href="index.html">About Me</a></li>
+            </ul>
         </div>
     </nav>
 
-
      <!--Content-->
-    <title>2024 Star Scholars Summer Showcase</title>
-    </head>
-    <body>
      <h1>2024 Star Scholars Summer Showcase</h1>
      <p class="description">The STAR Scholars Summer Showcase celebrates the research and creative work of Drexel’s STAR Scholars in the Undergraduate Research and Enrichment Program.</p>
      <img src="Images/star/front.jpg" alt="2024 Star Scholars Front Cover" class="container-image"/>
@@ -39,12 +37,11 @@
      <img src="Images/star/deskstand.jpg" alt="2024 Star Scholars Desk Stand" class="container-image"/>
      <img src="Images/star/card.jpg" alt="2024 Star Scholars Card"  class="container-image"/>
      <p class="description">Used during the final week of the Summer Term, the design also supported the event with wayfinding and presenter name tags.</p>
-    </body>
 
     <!--footer-->
-
     <footer>
-        <a href="#top">Back to the Top &#8593</a>
+        <a href="#top">Back to the Top &#8593;</a>
     </footer>
 
-    </html>
+</body>
+</html>
