--- a/tss.html
+++ b/tss.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,25 +9,26 @@
 </head>
 
  <!-- Full header -->
- <header>
-    <div class="logo">
-        <a href="index.html">
-            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-        </a>
-    </div>
-</header>
+<body>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
+        </div>
+    </header>
 
 <!-- Navigation Bar -->
-<nav>
-    <div class ="nav-container" id="nav-container">
-          <ul id="nav-links" class="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="index.html">About Me</a></li>
-    </div>
-</nav>
+    <nav>
+        <div class ="nav-container" id="nav-container">
+            <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="index.html">About Me</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <!--content-->
-    <body>
     <h1>The Smart Set Illustrations</h1>
     <p class="description">Before its discontinuation in 2024, The Smart Set was an online magazine covering pop culture, arts, science, and current affairs.</p>
     <img src="../IDM221-el686/Images/tss/debarges.jpg" alt="Debarges" class="container-image"/>
@@ -37,11 +39,11 @@
     <img src="../IDM221-el686/Images/tss/stone.jpg" alt="The Stone" class="container-image"/>
     <img src="../IDM221-el686/Images/tss/trail.jpg" alt="Trail" class="container-image"/>
     <p class="description"> The digital format offered an opportunity to experiment with diverse art styles for online publication.</p>
-    </body>
-    
-<!--Footer-->
-<footer>
-    <a href="#top">Back to the Top &#8593</a>
-</footer>
 
-    </html>
+<!--Footer-->
+    <footer>
+        <a href="#top">Back to the Top &#8593;</a>
+    </footer>
+
+</body>
+</html>
