--- a/work.html
+++ b/work.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,68 +9,72 @@
 </head>
 
 <!-- Full header -->
-<header>
-    <div class="logo">
-        <a href="index.html">
-            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+ <body>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
+        </div>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <div class ="nav-container" id="nav-container">
+            <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="index.html">About Me</a></li>
+            </ul>
+        </div>
+    </nav>
+
+        <h1>My Work</h1>
+        <p>This is a collection of my graphic design work which involves book design, branding, article illustrations and rebrands.</p>
+        
+<!--Thumbnails-->
+
+        <a href="book.html" class="title-link">
+            <h2>Susan Sontag Series</h2>
         </a>
-    </div>
-</header>
+        <a href="book.html">
+            <img src="Images/thumbnails/4.jpg" alt="susan sontag series" class="container-image">
+        </a>
 
-<!-- Navigation Bar -->
-<nav>
-    <div class ="nav-container" id="nav-container">
-          <ul id="nav-links" class="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="index.html">About Me</a></li>
-    </div>
-</nav>
+        <a href="pca.html" class="title-link">
+            <h2>Philadelphia Corporation for Aging</h2>
+        </a>
+        <a href="pca.html">
+            <img src="Images/thumbnails/3.jpg" alt="philadelphia corporation for aging" class="container-image">
+        </a>
 
-<body>
- <h1>My Work</h1>
- <p>This is a collection of my graphic design work which involves book design, branding, article illustrations and rebrands.</p>
- 
- <a href="book.html" class="title-link">
-    <h2>Susan Sontag Series</h2>
-</a>
- <a href="book.html">
-    <img src="Images/thumbnails/4.jpg" alt="susan sontag series" class="container-image">
-</a>
+        <a href="minhwa.html" class="title-link">
+            <h2>Minhwa Coffee</h2>
+        </a>
+        <a href="minhwa.html" class="title-link">
+            <img src="Images/thumbnails/2.jpg" alt="minhwa cofee" class="container-image">
+        </a>
 
-<a href="pca.html" class="title-link">
-    <h2>Philadelphia Corporation for Aging</h2>
-</a>
-<a href="pca.html">
-    <img src="Images/thumbnails/3.jpg" alt="philadelphia corporation for aging" class="container-image">
-</a>
+        <a href="tss.html" class="title-link">
+            <h2>The Smart Set</h2>
+        <a href="tss.html">
+            <img src="Images/thumbnails/1.jpg" alt="the smart set" class="container-image">
+        </a>
 
-<a href="minhwa.html" class="title-link">
-    <h2>Minhwa Coffee</h2>
-</a>
-<a href="minhwa.html" class="title-link">
-    <img src="Images/thumbnails/2.jpg" alt="minhwa cofee" class="container-image">
-</a>
+        <a href="star.html" class="title-link"></a>
+        <h2>2024 Star Summer Showcase</h2>
+        <a href="star.html">
+            <img src="Images/thumbnails/5.jpg" alt="2024 Star Summer Showcase" class="container-image">
+        </a>
 
-<a href="tss.html" class="title-link">
-    <h2>The Smart Set</h2>
-<a href="tss.html">
-    <img src="Images/thumbnails/1.jpg" alt="the smart set" class="container-image">
-</a>
+        <a href="onni.html" class="title-link"></a>
+        <h2>Onni Project</h2>
+        <a href="onni.html">
+            <img src="Images/thumbnails/6.jpg" alt="Onni Project" class="container-image">
+        </a>
 
-<a href="star.html" class="title-link"></a>
-<h2>2024 Star Summer Showcase</h2>
-<a href="star.html">
-    <img src="Images/thumbnails/5.jpg" alt="2024 Star Summer Showcase" class="container-image">
-</a>
+        <footer>
+            <a href="#top">Back to the Top &#8593;</a>
+        </footer>
 
-<a href="onni.html" class="title-link"></a>
-<h2>Onni Project</h2>
-<a href="onni.html">
-    <img src="Images/thumbnails/6.jpg" alt="Onni Project" class="container-image">
-</a>
 </body>
 </html>
-
-<footer>
-    <a href="#top">Back to the Top &#8593</a>
-</footer>
