--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,7 @@
               <ul id="nav-links" class="nav-links">
                 <li><a href="work.html">My Work</a></li>
                 <li><a href="index.html">About Me</a></li>
+              </ul>
         </div>
     </nav>
 
@@ -39,7 +40,7 @@
 
     <!-- Contact Section -->
     <section class="contact">
-        <p class="connect-text">Let's Connect!</p>
+        <h2 class="headings">Let's Connect!</h2>
         <p>Contact me: <a href="mailto:el686@drexel.edu">el686@drexel.edu</a></p>
         <p class="link-text"><a href="https://www.linkedin.com/in/esther-lee-05ba84276/">LinkedIn</a></p>
         <p class="link-text"><a href="https://www.instagram.com/esthercreativity/?hl=en">Instagram</a></p>
@@ -50,7 +51,7 @@
 
     <!-- Footer -->
     <footer>
-        <a href="#top">Back to the Top &#8593</a>
+        <a href="#top">Back to the Top &#8593;</a>
     </footer>
 
 </body>
