More HTML errors correction

--- a/tss.html
+++ b/tss.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,13 +31,13 @@
     <!--content-->
     <h1>The Smart Set Illustrations</h1>
     <p class="description">Before its discontinuation in 2024, The Smart Set was an online magazine covering pop culture, arts, science, and current affairs.</p>
-    <img src="../IDM221-el686/Images/tss/debarges.jpg" alt="Debarges" class="container-image"/>
-    <img src="../IDM221-el686/Images/tss/library.jpg" alt="Library" class="container-image"/>
-    <img src="../IDM221-el686/Images/tss/pokey.jpg" alt="Pokey" class="container-image"/>
+    <img src="Images/tss/debarges.jpg" alt="Debarges" class="container-image"/>
+    <img src="Images/tss/library.jpg" alt="Library" class="container-image"/>
+    <img src="Images/tss/pokey.jpg" alt="Pokey" class="container-image"/>
     <p class="description">Through a Pennoni Honors College co-op, weekly article illustrations were created, including a feature and an accompanying image for each narrative. </p>
-    <img src="../IDM221-el686/Images/tss/sell.jpg" alt="The Hard Sell" class="container-image"/>
-    <img src="../IDM221-el686/Images/tss/stone.jpg" alt="The Stone" class="container-image"/>
-    <img src="../IDM221-el686/Images/tss/trail.jpg" alt="Trail" class="container-image"/>
+    <img src="Images/tss/sell.jpg" alt="The Hard Sell" class="container-image"/>
+    <img src="Images/tss/stone.jpg" alt="The Stone" class="container-image"/>
+    <img src="Images/tss/trail.jpg" alt="Trail" class="container-image"/>
     <p class="description"> The digital format offered an opportunity to experiment with diverse art styles for online publication.</p>
 
 <!--Footer-->
